--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -14,6 +14,7 @@
         "eslint-config-airbnb-base": "^14.0.0",
         "eslint-plugin-import": "^2.18.2",
         "eslint-plugin-jest": "^28.6.0",
+        "globals": "^15.6.0",
         "jest": "^29.7.0"
     }
 }
