--- a/0x00-ES6_basic/package.json
+++ b/0x00-ES6_basic/package.json
@@ -12,9 +12,11 @@
         "@babel/preset-env": "^7.6.0",
         "eslint": "^7.32.0",
         "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-plugin-import": "^2.18.2",
-        "eslint-plugin-jest": "^28.6.0",
+        "eslint-plugin-import": "^2.24.0",
+        "eslint-plugin-jest": "^24.3.6",
         "globals": "^15.6.0",
-        "jest": "^29.7.0"
+        "jest": "^29.7.0",
+        "@typescript-eslint/parser": "^4.33.0",
+        "@typescript-eslint/eslint-plugin": "^4.33.0"
     }
 }
